# weather-trend-forecasting

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: streamlit_app.py
config/: default.yaml
notebooks/: exploration.ipynb
src/: __init__.py  config.py
src/analysis/: __init__.py  air_quality.py  anomaly.py  climate.py  spatial.py
src/features/: engineering.py
src/models/: __init__.py  ensemble.py  evaluation.py  feature_importance.py  ml.py  statistical.py
src/tracking/: __init__.py  experiment.py
src/visualization/: plots.py
tests/: conftest.py  test_air_quality.py  test_anomaly.py  test_cleaning.py  test_climate.py  test_ensemble.py  test_evaluation.py  test_feature_importance.py  test_features.py  test_ml.py  test_spatial.py  test_statistical.py  test_tracking.py  test_validation.py
