[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "weather-trend-forecasting"
version = "1.0.0"
description = "End-to-end global weather analysis and forecasting pipeline with 12 models and interactive dashboard"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Mazen Talsam"}]
dynamic = ["dependencies"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "ruff", "mypy"]

[tool.setuptools.packages.find]
include = ["src*"]

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}

[tool.ruff]
target-version = "py39"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
no_strict_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
